--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <div class="moreServices">
         <div class="small_box">
-            <img src=".imgs/poolLogo.webp" alt="" width="150px">
+            <img src="imgs/poolLogo.webp" alt="" width="150px">
             <div class="small_box_des">
                 <p>POOL INSTALL</p>
             </div>
