--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="navbar">
         <div class="logo-side">
-            <img src="/imgs/logo4.png" alt="Logo" height="70px">
+            <img src="imgs/logo4.png" alt="Logo" height="70px">
         </div>
     
         <!-- Hamburger icon for mobile -->
@@ -45,31 +45,31 @@
   <div class="w3-content w3-display-container">
   
     <div class="w3-display-container mySlides">
-        <img src="/imgs/bg1.jpg" style="width:100%">
+        <img src="imgs/bg1.jpg" style="width:100%">
         <div class="caption">YEARS OF EXPERIENCE IN</div>
         <div class="caption-sub">TURF INSTALLATION</div> <!-- Second caption -->
       </div>
   
     <div class="w3-display-container mySlides">
-      <img src="/imgs/bg2.jpg" style="width:100%">
+      <img src="imgs/bg2.jpg" style="width:100%">
       <div class="caption">YEARS OF EXPERIENCE IN</div>
       <div class="caption-sub">SWIMMING POOLS</div> <!-- Second caption -->
     </div>
   
     <div class="w3-display-container mySlides">
-      <img src="/imgs/bg3.jpg" style="width:100%">
+      <img src="imgs/bg3.jpg" style="width:100%">
       <div class="caption">YEARS OF EXPERIENCE IN</div>
       <div class="caption-sub">DECKS INSTALLATION</div> <!-- Second caption -->
     </div>
   
     <div class="w3-display-container mySlides">
-      <img src="/imgs/bg4.jpg" style="width:100%">
+      <img src="imgs/bg4.jpg" style="width:100%">
       <div class="caption">YEARS OF EXPERIENCE IN</div>
       <div class="caption-sub">IT SUPPORT AND DEVELOPMENT</div> <!-- Second caption -->
     </div>
   
     <div class="w3-display-container mySlides">
-      <img src="/imgs/bg5.jpg" style="width:100%">
+      <img src="imgs/bg5.jpg" style="width:100%">
       <div class="caption">YEARS OF EXPERIENCE IN</div>
       <div class="caption-sub">IT SUPPORT AND DEVELOPMENT</div> <!-- Second caption -->
     </div>
@@ -87,55 +87,55 @@
           <section class="hardscaping">
             <h2>Our Hardscaping Services</h2>
             <div class="service-grid">
-              <div class="service-box" style="background-image: url(/imgs/turf_install.jpg);">
+              <div class="service-box" style="background-image: url(imgs/turf_install.jpg);">
                 <div class="service-content">
                   <h3>Turf</h3>
                   <button class="info-btn">For More Info</button>
                 </div>
               </div>
-              <div class="service-box" style="background-image: url(/imgs/pavers_small.jpg);">
+              <div class="service-box" style="background-image: url(imgs/pavers_small.jpg);">
                 <div class="service-content">
                   <h3>Pavers</h3>
                   <button class="info-btn">For More Info</button>
                 </div>
               </div>
-              <div class="service-box" style="background-image: url(/imgs/naturalStones.jpg);">
+              <div class="service-box" style="background-image: url(imgs/naturalStones.jpg);">
                 <div class="service-content">
                   <h3>Natural Stones</h3>
                   <button class="info-btn">For More Info</button>
                 </div>
               </div>
-              <div class="service-box" style="background-image: url(/imgs/rocks.jpeg);">
+              <div class="service-box" style="background-image: url(imgs/rocks.jpeg);">
                 <div class="service-content">
                   <h3>Rocks</h3>
                   <button class="info-btn">For More Info</button>
                 </div>
               </div>
-              <div class="service-box" style="background-image: url(/imgs/concrete.jpg);">
+              <div class="service-box" style="background-image: url(imgs/concrete.jpg);">
                 <div class="service-content">
                   <h3>Concrete</h3>
                   <button class="info-btn">For More Info</button>
                 </div>
               </div>
-              <div class="service-box" style="background-image: url(/imgs/decks.jpg);">
+              <div class="service-box" style="background-image: url(imgs/decks.jpg);">
                 <div class="service-content">
                   <h3>Decks</h3>
                   <button class="info-btn">For More Info</button>
                 </div>
               </div>
-              <div class="service-box" style="background-image: url(/imgs/Pergolas.jpg);">
+              <div class="service-box" style="background-image: url(imgs/Pergolas.jpg);">
                 <div class="service-content">
                   <h3>Pergolas</h3>
                   <button class="info-btn">For More Info</button>
                 </div>
               </div>
-              <div class="service-box" style="background-image: url(/imgs/sp_install.jpg);">
+              <div class="service-box" style="background-image: url(imgs/sp_install.jpg);">
                 <div class="service-content">
                   <h3>Swimming Pools</h3>
                   <button class="info-btn">For More Info</button>
                 </div>
               </div>
-              <div class="service-box" style="background-image: url(/imgs/Jacuzzi.jpg);">
+              <div class="service-box" style="background-image: url(imgs/Jacuzzi.jpg);">
                 <div class="service-content">
                   <h3>Jacuzzi</h3>
                   <button class="info-btn">For More Info</button>
@@ -147,43 +147,43 @@
           <section class="hardscaping">
             <h2>Our Softscaping, and Outdoor Features & Structures Services, and MORE</h2>
             <div class="service-grid">
-              <div class="service-box" style="background-image: url(/imgs/raisedbeds.jpg);">
+              <div class="service-box" style="background-image: url(imgs/raisedbeds.jpg);">
                 <div class="service-content">
                   <h3>Raised Beds</h3>
                   <button class="info-btn">For More Info</button>
                 </div>
               </div>
-              <div class="service-box" style="background-image: url(/imgs/plants.jpg);">
+              <div class="service-box" style="background-image: url(imgs/plants.jpg);">
                 <div class="service-content">
                   <h3>Plants</h3>
                   <button class="info-btn">For More Info</button>
                 </div>
               </div>
-              <div class="service-box" style="background-image: url(/imgs/ourdoorkitchen.jpg);">
+              <div class="service-box" style="background-image: url(imgs/ourdoorkitchen.jpg);">
                 <div class="service-content">
                   <h3>Outdoor Kitchens</h3>
                   <button class="info-btn">For More Info</button>
                 </div>
               </div>
-              <div class="service-box" style="background-image: url(/imgs/outdoorbar.jpg);">
+              <div class="service-box" style="background-image: url(imgs/outdoorbar.jpg);">
                 <div class="service-content">
                   <h3>Outdoor Bar</h3>
                   <button class="info-btn">For More Info</button>
                 </div>
               </div>
-              <div class="service-box" style="background-image: url(/imgs/lights.jpeg);">
+              <div class="service-box" style="background-image: url(imgs/lights.jpeg);">
                 <div class="service-content">
                   <h3>Lights</h3>
                   <button class="info-btn">For More Info</button>
                 </div>
               </div>
-              <div class="service-box" style="background-image: url(/imgs/Irrigationsys.jpg);">
+              <div class="service-box" style="background-image: url(imgs/Irrigationsys.jpg);">
                 <div class="service-content">
                   <h3>Irrigation Systems</h3>
                   <button class="info-btn">For More Info</button>
                 </div>
               </div>
-              <div class="service-box" style="background-image: url(/imgs/painting.jpg);">
+              <div class="service-box" style="background-image: url(imgs/painting.jpg);">
                 <div class="service-content">
                   <h3>Paint</h3>
                   <button class="info-btn">For More Info</button>
@@ -195,7 +195,7 @@
 
     <div class="about-us">
         <div class="about-us-logo" id="about-us-id">
-            <img src="/imgs/logo4.png" alt="" width="500px">
+            <img src="imgs/logo4.png" alt="" width="500px">
         </div>
         <div class="about-us-info">
             <h1>ABOUT US</h1>
@@ -317,7 +317,7 @@
 <!-- Footer Section -->
 <div class="footer">
     <!-- Logo at the top -->
-    <img src="/imgs/logo4.png" alt="Company Logo" class="footer-logo">
+    <img src="imgs/logo4.png" alt="Company Logo" class="footer-logo">
 
     <!-- Address Section -->
     <div class="footer-address">
